Fixes crazy scroll flickering when menu is hidden

--- a/css/menu.css
+++ b/css/menu.css
@@ -5,10 +5,6 @@
   padding-top: 44px;
 }
 
-.fl-with-top-menu.fl-top-menu-hidden {
-  padding-top: 0;
-}
-
 .fl-viewport-header {
   position: fixed;
   top: 0;
